# stress-engine

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_is_template.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: health.py  portfolios.py  scenario_runs.py  scenarios.py  similar_periods.py
backend/app/core/: config.py  logging.py
backend/app/db/: backfill.py  base.py  seed.py  session.py  types.py
backend/app/schemas/: common.py  health.py  portfolio.py  recommendation.py  risk.py  scenario.py  similar_periods.py
backend/app/services/: analytics_service.py  cache.py  health.py  portfolio_service.py  scenario_executor.py  scenario_service.py  serialization.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api_analytics.py  test_api_portfolio_extras.py  test_api_portfolios.py  test_api_scenarios.py  test_data_providers.py  test_factor_decomposition.py  test_fama_french_loader.py  test_health.py  test_hedge_suggestions.py  test_historical_data_fetcher.py  test_historical_scenarios.py  test_hypothetical_scenarios.py  test_liquidity_risk.py  test_local_parquet_cache.py  test_macro_data_fetcher.py  test_metadata_and_presets.py  test_portfolio_analytics.py  test_portfolio_loader.py  test_returns_calculator.py  test_risk_analytics.py  test_scenario_executor.py  test_similar_periods.py
(+67 files in other folders)
