[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stress-workbench-backend"
version = "0.1.0"
description = "Backend services for the Market Scenario and Stress Testing Workbench."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "cvxpy>=1.5.3",
  "fastapi>=0.115.0",
  "fredapi>=0.5.2",
  "httpx>=0.28.0",
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pyarrow>=18.0.0",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "redis>=5.2.0",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "sqlalchemy>=2.0.36",
  "statsmodels>=0.14.4",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.32.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

